--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,8 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+
+<div class="page__footer-follow">
+  <ul class="social-icons">
+    <li><strong>Follow</strong></li>
+    <li><a href="https://scholar.google.com/citations?user=hD_mltMAAAAJ"><i class="ai ai-google-scholar-square ai-3x" aria-hidden="true"></i> Google Scholar</a></li>
+
 <!-- end custom footer snippets -->
