--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -247,7 +247,8 @@
     display: block;
     margin-bottom: 5px;
     padding-right: 5px;
-    padding-top: 2px;
+    padding-top: 5px;
+    padding-left: 5px;
     padding-bottom: 2px;
     color: inherit;
     font-size: $type-size-5;
