--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -258,3 +258,10 @@
     }
   }
 }
+
+.author__desktop{
+  margin-bottom: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 2px;
+}
