--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       <li><a href="http://github.com/{{ site.author.github }}"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a></li>
     {% endif %}
     {% if site.author.googlescholar %}
-      <li><a href="https://scholar.google.com/citations?user=hD_mltMAAAAJ"><i class="fa-brands fa-google-scholar" aria-hidden="true"></i></a></li>
+      <li><a href="https://scholar.google.com/citations?user=hD_mltMAAAAJ"><i class="fa-brands fa-google-scholar" aria-hidden="true"></i> Google Scholar</a></li>
     {% endif %}
   </ul>
 </div>
