--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -16,16 +16,11 @@
   }
 }
 
-@media (min-width: 57.8125em) {
-  .page {
-    padding-left: 0;
-  }
-}
 
 .page {
   @include breakpoint($large) {
     @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
+    // @include prefix(0.5 of 12);
     @include suffix(2 of 12);
   }
 
