--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,6 +33,7 @@
 @import "page";
 @import "archive";
 @import "sidebar";
+@import "sidebar2";
 
 @import "vendor/font-awesome/fontawesome";
 @import "vendor/font-awesome/solid";
