--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -19,7 +19,7 @@ layout: default
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
 
-    <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=3766402" style='border:none;'></iframe>
+    <!-- <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=3766402" style='border:none;'></iframe> -->
 
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
